# poker_solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  PLAN.md  README.md  SESSION_END_FINAL.md  STATUS.md  USAGE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  golden_check.yml  lint.yml  release.yml  ship_dry_run.yml  skip_ban.yml
assets/: README.md  preflop_equity_169x169.npz
assets/blueprints/: manifest.json
crates/cfr_core/: Cargo.toml
docs/: A83_RECONCILE_URGENT_2026-05-26.md  AGENT_COORDINATION.md  INDEX_2026-05-22.md  ONE_PAGE_SUMMARY.md  RELEASE.md  RESUME_2026-05-26.md  SESSION_END_REPORT.md  SESSION_HANDOFF.md  SIGNON_SUMMARY_2026-05-25.md  V1_GA_MILESTONE_HIT.md  WAKEUP_2026-05-27.md  WELCOME_BACK_USER_2026-05-23.md  a1_a5_walkthroughs_2026-05-28.md  a1_a5_walkthroughs_2026-05-28.raw.json  a83_deep_cap_root_cause_investigation.md  a83_followup_correct_experiment_2026-05-26.md  a83_nash_multiplicity_confirmed_2026-05-26.md  a83_terminal_utility_ablation_results_2026-05-26.md  a83_terminal_utility_ablation_results_2026-05-26_archived.md  a83_validation_2026-05-26.md  a83_validation_2026-05-26_plain_english.md  aggregator_vs_true_nash_explainer.md  architecture.md  audit_followup_backlog.md  audit_prompt_maintenance_check.md  autonomous_burst_release_plan.md  autonomous_decisions_2026-05-22.md  autonomous_log.md  b10_per_combo_frequency_plan_2026-05-28.md  blueprint_developer_guide.md  blueprint_generation.md  blueprint_reference_inventory.md  blueprint_user_guide.md  branch_name_drift_audit.md  branch_name_final_check.md  branch_split_runbook.md  card_removal_investigation.md  cargo_lock_audit.md  chance_outcomes_empty_rca_2026-05-26.md  changelog_accuracy_check.md  (+151 more)
docs/_archive_2026-05-26/: DOCS_NAV_MAP.md  MORNING_TLDR_2026-05-26.md  PAUSE_RESUME_2026-05-25.md  PRE_SIGNON_FAQ.md  PR_CONFLICT_RESOLUTION.md  PR_REVIEW_PREP_2026-05-23.md  a83_track_a_results_analysis_2026-05-26.md  a83_track_a_setup_2026-05-26.md  acceptance_test_reframe.md  action_menu_bug_hunt.md  action_menu_topology_audit.md  archived_claims_2026-05-23.md  audit_docs_cross_reference_check.md  autonomous_burst_release_plan.md  backup_branch_audit_2026-05-26.md  backup_integration_final_sync_2026-05-26.md  backup_integration_sync_2026-05-26.md  brown_apples_to_apples_2026-05-23.md  burst_summary_2026-05-23.md  changelog_consistency_audit.md  changelog_release_notes_consistency_2026-05-26.md  cleanup_pr_79_report_2026-05-26.md  cli_smoke_gauntlet_2026-05-26.md  comprehensive_review_2026-05-23-final.md  comprehensive_review_2026-05-23-late.md  comprehensive_review_2026-05-23.md  correct_a83_solver_entrypoint_2026-05-26.md  cross_doc_final_consistency.md  dcfr_weighting_audit.md  dmg_packaging_hardening_pr_86_2026-05-26.md  dmg_v1_4_0_smoke_verification.md  doc_code_bug_fixes_pr_83_2026-05-26.md  doc_drift_cleanup_pr_85_2026-05-26.md  doc_staleness_sweep_2026-05-26.md  downstream_verification_post_audit.md  end_of_session_verification_2026-05-26.md  final_artifact_integrity_2026-05-26.md  final_consistency_audit.md  final_consistency_audit_2026-05-23.md  final_main_sync_2026-05-26.md  (+166 more)
docs/_archive_2026-05-26_session/: README.md  comprehensive_review_2026-05-23-night.md  dcfr_perf_regression_bisection_2026-05-23.md  doc_orphan_audit_2026-05-23.md  doc_walkback_3rd_reversal_2026-05-23.md  faq_verification_2026-05-23.md  (+6 more)
poker_solver/: __init__.py  action_abstraction.py  blueprint.py  blueprint_interp.py  blueprint_loader.py  blueprint_subgame.py  card.py  chained.py  cli.py  cli_bb_format.py  cli_tree_walk.py  dcfr.py  equity.py  evaluator.py  games.py  hunl.py  hunl_solver.py  library.py  postflop_offpath.py  preflop.py  preflop_offpath.py  pushfold.py  range.py  range_aggregator.py  solver.py  solver_router.py
scripts/: a83_nash_multiplicity_probe.py  a83_terminal_utility_ablation.py  batch_solve.py  build_macos_dmg.sh  build_noambrown.sh  build_postflop_ev_table.py  check_pr.sh  execute_dual_channel_cutover.sh  generate_preflop_blueprint.py  generate_pushfold_charts.py  measure_flop_subgame_perf.py  measure_quality_metrics.py  measure_sparsity_for_v1_11.py  poker_solver.spec  profile_flop_subgame.py  pyinstaller_entry.py  release_v1_8_0.sh  release_v1_8_0_trigger.sh  resource_guard.sh  run_6exp_ratio_comparison.py  run_a1_a5_walkthroughs.py  run_flop_perf_measurements.sh  run_j7o_walkthrough.py  run_j7o_walkthrough_full_pov.py  run_v1_10_perf_bench.py  ship_v1_7_1.sh  sign_and_notarize.py  sync_repos.sh  v1_10_2_quick_bench.py  v1_10_2_turn_bench.py  v1_10_pr1_perf_smoke.py
scripts_retest/: marcus_w1_2_retest.py  w2_1_retest.py  w2_1_w2_3_post_5pr_retest.py  w2_2_per_combo_diff_retest.py  w2_4_retest.py  w2_4_test_spots.csv  w3_5_15class_poc_check.py  w3_5_6class_check.py  w3_5_convergence_test.py  w3_5_poc_explicit_combos.py  w3_5_poc_explicit_root.py
tests/: test_aa_vs_aa_root_indifference.py  test_abstraction_buckets.py  test_abstraction_emd.py  test_abstraction_integration.py  test_action_abstraction.py  test_asymmetric_contributions.py  test_asymmetric_range_sanity.py  test_bet_menu_diff.py  test_blueprint_interp.py  test_blueprint_loader.py  test_blueprint_pipeline.py  test_blueprint_subgame_tokens.py  test_blueprint_subgame_wiring.py  test_card.py  test_chained_orchestrator.py  test_chained_orchestrator_cache.py  test_cli_batch_solve_rust.py  test_cli_bb_normalization.py  test_cli_chained.py  test_cli_postflop_offpath_routing.py  test_cli_range_default_true_nash.py  test_cli_subcommands.py  test_cli_subgame.py  test_cli_version.py  test_cli_walk_tree.py  test_dcfr_alpha_guard.py  test_dcfr_diff.py  test_ev_invariance_gauntlet.py  test_evaluator.py  test_exploit_diff.py  test_exploitative_play.py  test_hunl_core.py  test_hunl_diff.py  test_hunl_postflop_solve.py  test_hunl_tree.py  test_kuhn_dcfr.py  test_leduc_dcfr.py  test_leduc_diff.py  test_leduc_intuition.py  test_library.py  (+45 more)
ui/: app.py  blueprint_router.py  mock_solver.py  mock_solver_fixtures.py  state.py
(+309 files in other folders)
