[workspace]
members = ["crates/cfr_core"]
resolver = "2"

# v1.10 PR-1 — link-time optimization + single codegen unit for release
# builds. Trades ~15-30s clean-build time for 5-15% perf on the
# vector-form DCFR hot path
# (`crates/cfr_core/src/dcfr_vector.rs::traverse_recursive_with_parallel`).
# Production `.so` is built via maturin in release mode, which inherits
# this workspace-level profile.
[profile.release]
lto = "fat"
codegen-units = 1
