[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "poker_solver"
version = "1.8.3"
description = "Texas Hold'em equity + GTO solver: hand evaluation, Monte Carlo equity, range parsing, CFR engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ashen" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]
dependencies = ["numpy>=1.24", "psutil>=5.9", "rich>=13.0"]

[project.optional-dependencies]
# PR 79 (2026-05-26): dropped `black` in favour of `ruff format` (single
# formatter; black/ruff-format diverge on edge cases at line-length=88,
# and CHANGELOG already names ruff as the formatter going forward).
# Added `mypy>=1.8`: CONTRIBUTING/DEVELOPER/README require `mypy
# poker_solver` strict-clean as part of the check battery.
dev = ["maturin>=1.7", "mypy>=1.8", "pytest>=7.0", "pytest-timeout>=2.3", "ruff>=0.6"]
ui = ["nicegui>=3.0,<4.0"]
# PyInstaller is OPT-IN: only installed when packaging the macOS .app.
# Default `pip install -e .` does NOT pull it in.  See assets/README.md.
# PR 44 fix: `distribution` inlines `nicegui` so the build venv has the UI
# runtime deps that PyInstaller's analyzer needs to bundle.  Without this,
# `pip install -e ".[distribution]"` produced a venv missing nicegui and the
# resulting .dmg shipped without it (v1.4.0 smoke verification §3).
distribution = ["pyinstaller>=6.0", "nicegui>=3.0,<4.0"]

[project.scripts]
poker-solver = "poker_solver.cli:main"

[tool.maturin]
python-source = "."
module-name = "poker_solver._rust"
manifest-path = "crates/cfr_core/Cargo.toml"
features = ["pyo3/extension-module"]
# Bundle push/fold chart data into the wheel so importlib.resources can
# load it from an installed package (not just an editable source tree).
include = ["poker_solver/charts/*.json"]
# macOS distribution builds MUST target universal2 (arm64 + x86_64 lipo'd)
# so the .so works under both Apple Silicon native Python and x86_64 Python
# (e.g., pyenv-managed; Rosetta).  Phase 1 persona test W1.4 caught
# ImportError: incompatible architecture ('have arm64, need x86_64') when
# `poker-solver --backend rust` is invoked from x86_64 Python against a
# single-arch arm64 build.  maturin does not accept `target` as a
# pyproject.toml field (CLI-only); developers and CI must pass:
#     maturin {build,develop} --release --target universal2-apple-darwin
# Prerequisite (one-time): rustup target add x86_64-apple-darwin aarch64-apple-darwin
# scripts/build_macos_dmg.sh rejects single-arch .so files at pre-flight.

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 90
# Async fixtures in tests/test_ui_smoke.py rely on the `user` fixture from
# nicegui.testing (PR 10). pytest-asyncio's default `strict` mode rejects
# this; `auto` mode treats `async def` test functions as `@pytest.mark.asyncio`
# automatically. See pytest-asyncio docs.
asyncio_mode = "auto"
markers = [
    "slow: long-running tests (5min-1hr); skip with -m 'not slow'",
    "very_slow: hour-scale builds (production precompute); opt-out of timeout cap",
    "parity_noambrown: river-spot parity diff vs Noam Brown's river_solver_optimized (deselect with -m 'not parity_noambrown')",
    "ui: tests that require nicegui (skip if not installed)",
    "golden: tests that compare against frozen golden values; require explicit [regen-goldens] commit-message tag to update (Guard B)",
]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["references/code", "references/manual_downloads"]

[tool.ruff.lint]
# E = pycodestyle errors, W = pycodestyle warnings, F = pyflakes,
# I = isort, B = flake8-bugbear, UP = pyupgrade, SIM = flake8-simplify.
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# ruff format owns line-length judgement calls (PR 79 dropped black).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False is fine in tests

# PR 79: Black removed in favour of ruff format (single formatter). The
# project's [tool.ruff] line-length=88 / target-version=py39 already
# matches the prior black config exactly; ruff format handles the
# `references/{code,manual_downloads}` exclusion via `extend-exclude`
# above.

[tool.mypy]
# PR 79: the PyO3-built `poker_solver._rust` extension has no .pyi stubs
# (maturin doesn't emit them; PR 23 / 33 didn't hand-write them). And
# `rich` is a runtime dep but ships no type stubs by default (rich-stubs
# is a separate package). Both are import-only sites; the import error
# is noisy without `ignore_missing_imports`.
ignore_missing_imports = true
